# fast-woothee-python

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
benchmarks/: bench.py  requirements.txt
examples/: is_crawler.py
fast_woothee/: __init__.py
src/: lib.rs
