[project]
name = "fast_woothee"
description = "Python Bindings for woothee-rust"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hideo Hattori", email = "hhatto.jp@gmail.com"},
]
requires-python = ">=3.10"
keywords = ["path", "rust"]
classifier = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin==1.8.6"
]


[project.urls]
homepage = "https://github.com/hhatto/fast-woothee-python"
repository = "https://github.com/hhatto/fast-woothee-python"

[build-system]
requires = ["maturin==1.8.6"]
build-backend = "maturin"

[tool.maturin]
module-name = "fast_woothee._woothee"
include = [
    { path = "Cargo.lock", format = "sdist" }
]
exclude = [".github/**"]
locked = true
